--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shopsmart",
-  "description": "Saving you oodles of time while grocery shopping"
+  "description": "Saving you oodles of time while grocery shopping",
   "version": "0.1.0",
   "private": true,
   "repository": {
